nuevas imagenes cachorros

--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
         <section class="carrusel">
 
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
+                <div class="carousel-inner hola1">
+                  <div class="carousel-item active hola">
                     <img src="imagenes/perritos/peerrito_dando_la_mano.jpg" class="d-block w-100" alt="...">
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item hola">
                     <img src="imagenes/perritos/perrito_mirada.jpeg" class="d-block w-100" alt="...">
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item hola">
                     <img src="imagenes/perritos/cocker_mayor_ancho.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
@@ -197,22 +197,24 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-              <div class="texto_carusel">
-                <p>En la vida nos toca pasar por momentos dolorosos, uno de ellos es sobre el "AMOR".</p>
-                <p>Una ruptura de una relacion por ejemplo.</p>
-                <p>Sentimos que no podemos confiar en nadie mas.</p>
-                 <p>Que nos Fallaron, o simplemente, el amor se acabo....</p> 
-                 <p>Esto es algo que pasa y pasara</p>
-                  <h3>Pero... ¿sabes que?</h3>
-                  <p>Existen animalitos, con un amor unico para dar.</p>
-                    <p>es tu oportunidad de cambiar tu perspectiva de lo que realmente es el amor</p> 
-                <p>que mejor compania que un perrito fiel y amoroso</p>
-                <p>recuerda cuidarlo y amarlo, ya que ellos lo hacen hasta su ultimo dia de vida</p>
-
-              </div>
+              
              
 
         </section>
+
+        <div class="texto_carusel">
+            <p>En la vida nos toca pasar por momentos dolorosos, uno de ellos es sobre el "AMOR".</p>
+            <p>Una ruptura de una relacion por ejemplo.</p>
+            <p>Sentimos que no podemos confiar en nadie mas.</p>
+             <p>Que nos Fallaron, o simplemente, el amor se acabo....</p> 
+             <p>Esto es algo que pasa y pasara</p>
+              <h3>Pero... ¿sabes que?</h3>
+              <p>Existen animalitos, con un amor unico para dar.</p>
+                <p>es tu oportunidad de cambiar tu perspectiva de lo que realmente es el amor</p> 
+            <p>que mejor compania que un perrito fiel y amoroso</p>
+            <p>recuerda cuidarlo y amarlo, ya que ellos lo hacen hasta su ultimo dia de vida</p>
+
+          </div>
 
         <div class="div_corrazon">
 
@@ -227,6 +229,8 @@
 
 
     <footer>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12402.949794490549!2d-58.42146981532225!3d-34.57591329418247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59c771eb933%3A0x6b3113b596d78c69!2sPalermo%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1648316288256!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <div class="primera_columna">
 
@@ -263,6 +267,7 @@
 
 
         <div class="Segunda_columna">
+
 
 
             <p class="titulos_column_footer">
