--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -140,6 +140,8 @@
     
 
     <footer>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12402.949794490549!2d-58.42146981532225!3d-34.57591329418247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59c771eb933%3A0x6b3113b596d78c69!2sPalermo%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1648316288256!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
         <div class="primera_columna">
 
