se crea la pagina de cachorros

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </li>
 
             <li>
-                <a href="">cachorros</a>
+                <a href="paginas/cachorros.html">cachorros</a>
             </li>
 
             <li>
