--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -24,7 +24,7 @@
             </li>
 
             <li>
-                <a href="">cachorros</a>
+                <a href="cachorros.html">cachorros</a>
             </li>
 
             <li>
